--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,24 +7,26 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid x:Name="btnNine">
-        <TextBlock x:Name="txtNumber" HorizontalAlignment="Left" Margin="245,62,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="501" Height="48" FontSize="36"/>
-        <Button x:Name="btnClear" Content="Button" HorizontalAlignment="Left" Margin="53,142,0,0" VerticalAlignment="Top" Width="90" Height="48" Click="btnClear_Click"/>
-        <Button x:Name="btnSeven" Content="Button" HorizontalAlignment="Left" Margin="261,149,0,0" VerticalAlignment="Top" Height="34" Width="53" Click="btnSeven_Click"/>
-        <Button x:Name="btnEight" Content="Button" HorizontalAlignment="Left" Margin="400,149,0,0" VerticalAlignment="Top" Height="34" Width="53" RenderTransformOrigin="1.547,0.577" Click="btnEight_Click"/>
-        <Button x:Name="btnDivide" Content="Button" HorizontalAlignment="Left" Margin="678,149,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.503,0.291" Width="53" Height="34"/>
-        <Button x:Name="btnFour" Content="Button" HorizontalAlignment="Left" Margin="261,217,0,0" VerticalAlignment="Top" Height="34" Width="53" Click="btnFour_Click"/>
-        <Button x:Name="btnDot" Content="Button" HorizontalAlignment="Left" Margin="261,363,0,0" VerticalAlignment="Top" Height="34" Width="53"/>
-        <Button x:Name="btnFive" Content="Button" HorizontalAlignment="Left" Margin="400,217,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnFive_Click"/>
-        <Button x:Name="btnTwo" Content="Button" HorizontalAlignment="Left" Margin="400,292,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnTwo_Click"/>
-        <Button x:Name="btnZero" Content="Button" HorizontalAlignment="Left" Margin="400,363,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnZero_Click"/>
-        <Button x:Name="btnSix" Content="Button" HorizontalAlignment="Left" Margin="545,217,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnSix_Click"/>
-        <Button x:Name="btnThree" Content="Button" HorizontalAlignment="Left" Margin="545,292,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnThree_Click"/>
-        <Button x:Name="btnEqual" Content="Button" HorizontalAlignment="Left" Margin="545,363,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.546,1.196" Width="53" Height="34"/>
-        <Button x:Name="btnPlus" Content="Button" HorizontalAlignment="Left" Margin="678,217,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.105,-0.519" Width="53" Height="34"/>
-        <Button x:Name="btnMinus" Content="Button" HorizontalAlignment="Left" Margin="678,292,0,0" VerticalAlignment="Top" Width="53" Height="34"/>
-        <Button x:Name="btnAdd" Content="Button" HorizontalAlignment="Left" Margin="678,363,0,0" VerticalAlignment="Top" Width="53" Height="34"/>
-        <Button x:Name="btnOne" Content="Button" HorizontalAlignment="Left" Margin="261,292,0,0" VerticalAlignment="Top" Height="34" Width="53" Click="btnOne_Click_1"/>
-        <Button x:Name="btnNine1" Content="Button" HorizontalAlignment="Left" Margin="545,149,0,0" VerticalAlignment="Top" Width="54" Height="34" Click="btnNine1_Click"/>
+        <TextBlock x:Name="txtNumber" HorizontalAlignment="Left" Margin="245,62,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="501" Height="48" FontSize="36"/>
+        <Button x:Name="btnClear" Content="AC" HorizontalAlignment="Left" Margin="53,142,0,0" VerticalAlignment="Top" Width="90" Height="48" Click="btnClear_Click"/>
+        <Button x:Name="btnSeven" Content="7" HorizontalAlignment="Left" Margin="261,149,0,0" VerticalAlignment="Top" Height="34" Width="53" Click="btnSeven_Click"/>
+        <Button x:Name="btnEight" Content="8" HorizontalAlignment="Left" Margin="400,149,0,0" VerticalAlignment="Top" Height="34" Width="53" RenderTransformOrigin="1.547,0.577" Click="btnEight_Click"/>
+        <Button x:Name="btnDivide" Content="/" HorizontalAlignment="Left" Margin="678,149,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.503,0.291" Width="53" Height="34" Click="btnDivide_Click"/>
+        <Button x:Name="btnFour" Content="4" HorizontalAlignment="Left" Margin="261,217,0,0" VerticalAlignment="Top" Height="34" Width="53" Click="btnFour_Click"/>
+        <Button x:Name="btnDot" Content="." HorizontalAlignment="Left" Margin="261,363,0,0" VerticalAlignment="Top" Height="34" Width="53" Click="btnDot_Click"/>
+        <Button x:Name="btnFive" Content="5" HorizontalAlignment="Left" Margin="400,217,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnFive_Click"/>
+        <Button x:Name="btnTwo" Content="2" HorizontalAlignment="Left" Margin="400,292,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnTwo_Click"/>
+        <Button x:Name="btnZero" Content="0" HorizontalAlignment="Left" Margin="400,363,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnZero_Click"/>
+        <Button x:Name="btnSix" Content="6" HorizontalAlignment="Left" Margin="545,217,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnSix_Click"/>
+        <Button x:Name="btnThree" Content="3" HorizontalAlignment="Left" Margin="545,292,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnThree_Click"/>
+        <Button x:Name="btnEqual" Content="=" HorizontalAlignment="Left" Margin="545,363,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.546,1.196" Width="53" Height="34" Click="btnEqual_Click"/>
+        <Button x:Name="btnPlus" Content="*" HorizontalAlignment="Left" Margin="678,217,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.105,-0.519" Width="53" Height="34" Click="btnPlus_Click"/>
+        <Button x:Name="btnMinus" Content="-" HorizontalAlignment="Left" Margin="678,292,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnMinus_Click"/>
+        <Button x:Name="btnAdd" Content="+" HorizontalAlignment="Left" Margin="678,363,0,0" VerticalAlignment="Top" Width="53" Height="34" Click="btnAdd_Click"/>
+        <Button x:Name="btnOne" Content="1" HorizontalAlignment="Left" Margin="261,292,0,0" VerticalAlignment="Top" Height="34" Width="53" Click="btnOne_Click_1"/>
+        <Button x:Name="btnNine1" Content="9" HorizontalAlignment="Left" Margin="545,149,0,0" VerticalAlignment="Top" Width="54" Height="34" Click="btnNine1_Click"/>
+        <Button Content="&lt;&lt;" HorizontalAlignment="Left" Margin="53,249,0,0" VerticalAlignment="Top" Height="48" Width="90"/>
+        <Button Content="%" HorizontalAlignment="Left" Margin="53,363,0,0" VerticalAlignment="Top" Height="48" Width="90"/>
 
     </Grid>
 </Window>
